--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 wilmol - Will Molloy UPI: wmol664 ID: 528412822
 tshi206 - Mason Shi  UPI: tshi206 ID: 313368828
 qhua948 - Dovahkiin Huang UPI: qhua948 ID: 819845441
+bche722 - Baiwei Chen UPI: bche722 ID:896127611
